--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -29,7 +29,6 @@
                                         <input type="hidden" id="option1" name="option1" value="0">
                                         <input type="hidden" id="option2" name="option2" value="0">
                                         <input type="hidden" id="option3" name="option3" value="0">
-                                        <input type="hidden" id="option_level" name="option_level" value="0">
                                         <input type="hidden" id="count" name="count" value="1">
                                         <input type="hidden" id="id" name="id" value="1">
                                      </form>
@@ -37,7 +36,7 @@
                                 </li>
                                 <li>
                                     <span class="li_title">키트명</span>
-                                    <p>{{prd_detail.title}}</p>
+                                    <p><span id="title">{{prd_detail.title}}</span></p>
                                 </li>
                                 <li>
                                     <span class="li_title">학습 목표</span>
@@ -98,7 +97,9 @@
                     <div class="btn_area">
                         <a href="javascript:void(0);" class="btn cart" onClick="javascript:goOrder(1);">장바구니 담기</a>
                         <a class="btn buy" href="javascript:void(0);" onClick="javascript:goOrder(2);">바로구매</a>
+                         {% if request.session.runcoding > 5 %}
                          <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px;"></div>
+                        {%endif%}
                     </div>
 
                     <div id="margin" style="margin-top:40px;"></div>
@@ -116,29 +117,102 @@
     </div>
 
     <script>
-         naver.NaverPayButton.apply({
-            BUTTON_KEY: "CE196A42-5C47-46D0-A871-00BB22E69FB6",
-            TYPE: "A", //버튼 스타일
-            COLOR: 1, //버튼 색상타입
-            COUNT: 2, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부
-            ENABLE: "Y", //네이버페이 활성여부(재고부족 등에는 N으로 비활성처리)
-            EMBED_ID: "naverpay_btn", //네이버페이 버튼 UI가 부착될 HTML element의 ID
-            BUY_BUTTON_HANDLER : function() {
-                //중략
-                //핸들러 내에서 아임포트 네이버페이 결제 함수 호출
-<!--                IMP.request_pay(param);-->
-                       $("#res_msg").text('곧 오픈 됩니다.');
-                        $('div.modal').modal();
-                        return false;
-            },
-            WISHLIST_BUTTON_HANDLER : function() {
-                //중략
+         var runcoding = '{{request.session.runcoding}}';
+         if( runcoding> 5)
+         {
+             naver.NaverPayButton.apply({
+                BUTTON_KEY: "CE196A42-5C47-46D0-A871-00BB22E69FB6",
+                TYPE: "A", //버튼 스타일
+                COLOR: 1, //버튼 색상타입
+                COUNT: 2, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부
+                ENABLE: "Y", //네이버페이 활성여부(재고부족 등에는 N으로 비활성처리)
+                EMBED_ID: "naverpay_btn", //네이버페이 버튼 UI가 부착될 HTML element의 ID
+                BUY_BUTTON_HANDLER : function() {
+                    //중략
+                    //핸들러 내에서 아임포트 네이버페이 결제 함수 호출
 
-                //핸들러 내에서 아임포트 네이버페이 찜하기 함수 호출(iamport.payment-1.1.6.js부터 지원됨)
-                IMP.naver_zzim(param);
-            }
-        });
+                    var option1 = document.getElementById("options_1");
+                    var option2 = document.getElementById("options_2");
+                    var option3 = document.getElementById("options_3");
+                    var quantity = document.getElementById("prodQuantity").value;
+                    var price = removeComma(document.getElementById("total_price").innerText);
+                    var prdCode =  $("input[type=hidden][name=prd_code]").val();
 
+                    var option1_val = 0;
+                    var option2_val = 0;
+                    var option3_val = 0;
+
+                    if(option1 != null && option1.selectedIndex == 0)
+                    {
+                         $("#res_msg").text("옵션을 선택해 주세요.");
+                         $('div.modal').modal();
+                         return false;
+                    }
+                    if(option2 != null && option2.selectedIndex == 0)
+                    {
+                         $("#res_msg").text("옵션을 선택해 주세요.");
+                         $('div.modal').modal();
+                         return false;
+                    }
+                    if(option3 != null && option3.selectedIndex == 0)
+                    {
+                         $("#res_msg").text("옵션을 선택해 주세요.");
+                         $('div.modal').modal();
+                         return false;
+                    }
+                    else
+                    {
+                        if(option1 != null)
+                            option1_val = option1.selectedIndex;
+                        if(option2 != null)
+                            option2_val = option2.selectedIndex;
+                        if(option3 != null)
+                            option3_val = option3.selectedIndex;
+                    }
+
+                var newForm = $('<form></form>');
+
+                newForm.attr("name", "order");
+                newForm.attr("method", "post");
+                newForm.attr("action", "/order_naver/");
+
+                newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'prd_code', value : prdCode}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'option1', value : option1_val}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'option2', value : option2_val}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'option3', value : option3_val}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'count', value : quantity}));
+                newForm.append($('<input/>', {type: 'hidden', name: 'prd_price', value : price}));
+
+                newForm.appendTo('body');
+                newForm.submit();
+
+
+                },
+                WISHLIST_BUTTON_HANDLER : function() {
+                    var price = removeComma(document.getElementById("total_price").innerText);
+                    var prdCode =  $("input[type=hidden][name=prd_code]").val();
+                    var title = document.getElementById("title").innerText;
+                    var img = "http://runcoding.co.kr"+'{{prd_detail.prd_code}}';
+                    var url = "http://runcoding.co.kr/detail_prd/?prd_code=" + prdCode;
+
+                    //핸들러 내에서 아임포트 네이버페이 찜하기 함수 호출(iamport.payment-1.1.6.js부터 지원됨)
+                    IMP.naver_zzim(param)({
+                        naverProducts: [
+                        {
+                            id: prdCode,
+                            name:title,
+                            desc:'상상을 현실로',
+                            uprice: price,
+                            url:url,
+                            thumb:img,
+                            image:img
+                        }
+                     ]
+                   });
+                }
+            });
+        }
 
         $(window).scroll(function() {
             var scroll_top = $(window).scrollTop();
@@ -178,7 +252,6 @@
                  $("input[type=hidden][name=id]").val('100');
             }
 
-            $("input[type=hidden][name=option_level]").val(option_level.value);
             $("input[type=hidden][name=flag]").val(flag);
             $("input[type=hidden][name=count]").val(quantity);
             document.getElementById("prd_form").submit();
