--- a/main/templates/product/xml.html
+++ b/main/templates/product/xml.html
@@ -1,10 +1,1 @@
-<script>
-    var xml = '{{xml_file}}';
-
-    if(xml == '2020080013001')
-        location.href = "/static/resource/data/xml/trashcan_arduino.xml";
-    else if(xml == '2020080023001')
-        location.href = "/static/resource/data/xml/trashcan_mblock.xml";
-    else if(xml == 'all')
-        location.href = "/static/resource/data/xml/trashcan_all.xml";
-</script>
+<input type="text" value="{{data}}">
