--- a/main/templates/payment/pay_naver.html
+++ b/main/templates/payment/pay_naver.html
@@ -186,7 +186,7 @@
 
     function callback()
     {
-        location.href = "http://192.168.0.5:8000/naver_pay/";
+        location.href = "http://runcoding.co.kr/naver_pay/";
     }
 
 
