화면 조정 - 상세페이지

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -98,7 +98,7 @@
                         <a href="javascript:void(0);" class="btn cart" onClick="javascript:goOrder(1);">장바구니 담기</a>
                         <a class="btn buy" href="javascript:void(0);" onClick="javascript:goOrder(2);">바로구매</a>
                          {% if request.session.runcoding > 5 %}
-                         <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px;"></div>
+                         <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px; margin-left:-15px;"></div>
                         {%endif%}
                     </div>
 
