--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -56,10 +56,10 @@
         }
     }
 
-    window.onbeforeunload = function()
-    {
-        window.history.back();
-    };
+<!--    window.onbeforeunload = function()-->
+<!--    {-->
+<!--        window.history.back();-->
+<!--    };-->
 
     </script>
 
